# ida-clang-include

./: .pre-commit-config.yaml  README.md  ida-plugin.json  ida_clang_include.py  pyproject.toml
.github/workflows/: lint.yml
clang_include/: __init__.py  compat.py  config.py  diff.py  manager.py  model.py  options.py  profiles.py  view.py
